--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ section {
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  border: 3px solid #0ff;
+  border: 3px solid rgb(255, 255, 255);
   object-fit: cover;
   box-shadow: 0 4px 15px rgba(0,0,0,0.5);
 }
